--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "pong-rs"
 version = "0.1.0"
-authors = ["Justin Sacbibit <jsacbibit@gmail.com>"
+authors = ["Justin Sacbibit <jsacbibit@gmail.com>",
            "Alexander von Franz <allrex@aries.uberspace.de>"]
 
 [[bin]]
